@@ -669,7 +669,7 @@ GetType(
      * If we don't know about the type, just use the numeric value.
      */
 
-    if (type > lastType || type < 0) {
+    if (type > lastType) {
 	Tcl_SetIntObj(resultPtr, (int) type);
     } else {
 	Tcl_SetStringObj(resultPtr, typeNames[type], -1);
@@ -1528,5 +1528,5 @@ ConvertDWORD(
      */
 
     localType = (*((char*)(&order)) == 1) ? REG_DWORD : REG_DWORD_BIG_ENDIAN;
-    return (type != localType) ? SWAPLONG(value) : value;
+    return (type != localType) ? (DWORD)SWAPLONG(value) : value;
 }
