@@ -1,3 +1,10 @@
+2011-10-07  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tclWinChan.c:    Fix various gcc warnings
+	* win/tclWinConsole.c: (discovered with latest
+	* win/tclWinNotify.c:  mingw, based on gcc 4.6.1)
+	* win/tclWinReg.c:
+
 2011-09-26  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/rules.vc:  Support Visual Studio 11
